Forums: Fix the display of some characters within `<select>` elements where the lower section would be cut off in certain browsers.
Props tobifjellner, netweb.
Fixes #4933.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9851 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -697,6 +697,12 @@ $paginationBreakPoint: "600px";
 		margin-top: 0;
 	}
 
+	fieldset.bbp-form select,
+	fieldset.bbp-form input[type="text"] {
+		min-height: 32px;
+		height: 32px;
+	}
+
 	.bbp-submit-wrapper {
 		margin-top: -35px;
 
